designed footer and faq

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     />
 
     <!-- style css -->
-    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="assets/css/all.min.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -598,8 +598,8 @@
       <section class="works py-5">
         <div class="container">
           <div class="row work-slider">
-            <div class="col-12 col-md-6 col-lg-4 my-3 my-md-0 d-flex align-items-stretch">
-              <div class="work">
+            <div class="col-12 col-md-6 col-lg-4 my-3 my-md-0">
+              <div class="work h-100">
                 <img class="py-2" src="assets/img/works1.png" alt="" />
                 <h6 class="fs-20 bold mons pt-2">We list Components</h6>
                 <p class="fs-16 muted">
@@ -608,8 +608,8 @@
                 </p>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4 my-3 my-md-0 d-flex align-items-stretch">
-              <div class="work">
+            <div class="col-12 col-md-6 col-lg-4 my-3 my-md-0">
+              <div class="work h-100">
                 <img class="py-2" src="assets/img/work2.png" alt="" />
                 <h6 class="fs-20 bold mons pt-2">Check the Compatibility</h6>
                 <p class="fs-16 muted">
@@ -619,8 +619,8 @@
                 </p>
               </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4 my-3 my-md-0 d-flex align-items-stretch">
-              <div class="work">
+            <div class="col-12 col-md-6 col-lg-4 my-3 my-md-0">
+              <div class="work h-100">
                 <img class="py-2" src="assets/img/work3.png" alt="" />
                 <h6 class="fs-20 bold mons pt-2">Create a High-End PC</h6>
                 <p class="fs-16 muted">
@@ -640,6 +640,44 @@
               </div>
             </div>
           </div>
+          <!-- <div class="work-slider">
+            <div class="work h-100">
+              <img class="py-2" src="assets/img/works1.png" alt="" />
+              <h6 class="fs-20 bold mons pt-2">We list Components</h6>
+              <p class="fs-16 muted">
+                Along with it, if you don't find any product on our website, then you can email our team and
+                we'll add the product on our website especially for you!
+              </p>
+            </div>
+
+            <div class="work h-100">
+              <img class="py-2" src="assets/img/work2.png" alt="" />
+              <h6 class="fs-20 bold mons pt-2">Check the Compatibility</h6>
+              <p class="fs-16 muted">
+                Although we try to add compatibility of all the products manually, but still if you find
+                anything which isn't compatible with the product it has to be compatible with, then you can
+                email us and we'll take the required actions ASAP.
+              </p>
+            </div>
+
+            <div class="work h-100">
+              <img class="py-2" src="assets/img/work3.png" alt="" />
+              <h6 class="fs-20 bold mons pt-2">Create a High-End PC</h6>
+              <p class="fs-16 muted">
+                If you're not sure how to build your PC yourself, then you can also check the compatibility
+                using Build My PC and take help from local shops to build your custom PC.
+              </p>
+            </div>
+
+            <div class="work t-center">
+              <img class="py-2" src="assets/img/works1.png" alt="" />
+              <h6 class="fs-20 bold mons">We list Components</h6>
+              <p class="fs-16 muted">
+                Along with it, if you don't find any product on our website, then you can email our team and
+                we'll add the product on our website especially for you!
+              </p>
+            </div>
+          </div> -->
         </div>
       </section>
       <!-- how works system -->
@@ -705,6 +743,54 @@
       </section>
       <!-- say -->
 
+      <!-- pc -->
+      <section class="pc py-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="custom-card t-center p-4 h-100">
+                <div class="pb-1">
+                  <h3 class="mons fs-24 py-2 bold"><span class="c-red">RDY </span> Prebuilt Computers</h3>
+                  <p class="muted fs-16 py-2">
+                    Start your gaming journey with professionally designed RDY prebuilt systems and get Free
+                    2-Day Shipping!
+                  </p>
+                  <a href="#" class="btn btn-danger">Shop Now</a>
+                </div>
+                <div class="py-2"><img src="assets/img/pc1.png" alt="" /></div>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="custom-card t-center p-4 h-100">
+                <div class="pb-1">
+                  <h3 class="mons fs-24 py-2 bold"><span class="c-red">Easy </span> Builder</h3>
+                  <p class="muted fs-16 py-2">
+                    Custom build the perfect gaming PC based on the games you play and we will ship it out in
+                    5 business days!
+                  </p>
+                  <a href="#" class="btn btn-outline-danger">Start Building</a>
+                </div>
+                <div class="py-2"><img src="assets/img/pc2png.png" alt="" /></div>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="custom-card t-center p-4 h-100">
+                <div class="pb-1">
+                  <h3 class="mons fs-24 py-2 bold"><span class="c-red">Custom </span> Gaming PCs</h3>
+                  <p class="muted fs-16 py-2">
+                    Custom build to order. Our PC builder lets you choose the components you need to outclass
+                    your adversaries.
+                  </p>
+                  <a href="#" class="btn btn-outline-danger">Start Building</a>
+                </div>
+                <div class="py-2"><img src="assets/img/pc3.png" alt="" /></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- pc -->
+
       <!-- help-points -->
       <section class="help-points py-5">
         <div class="container">
@@ -733,6 +819,7 @@
         </div>
       </section>
       <!-- help-points -->
+
       <!-- our-feat -->
       <section class="our-feat py-5">
         <div class="container">
@@ -777,11 +864,142 @@
         </div>
       </section>
       <!-- our-feat -->
+
+      <!-- faq -->
+      <section class="FAQ py-5">
+        <div class="container">
+          <div class="faq-top t-center">
+            <h3 class="bold fs-40 mons">Some Frequently Asked <span class="c-red">Questions!</span></h3>
+            <p class="muted fs-16">Have Some More?? Just contact Us...</p>
+            <div class="t-center">
+              <input
+                class="form-control faq-search"
+                placeholder="Search"
+                type="search"
+                name="search"
+                id="search"
+              />
+            </div>
+          </div>
+          <div>
+            <div class="mt-5">
+              <a href="#" class="faq-tab btn btn-outline-secondary"
+                ><i class="fa-solid fa-user"></i> General</a
+              >
+              <a href="#" class="faq-tab btn btn-outline-secondary"
+                ><i class="fa-solid fa-plus"></i> Technical</a
+              >
+              <a href="#" class="faq-tab btn btn-outline-secondary"
+                ><i class="fa-solid fa-plus"></i> Non Technical</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- faq -->
     </main>
     <!-- main -->
 
     <!-- footer -->
-    <footer></footer>
+    <footer class="footer">
+      <div class="container pt-lg-3">
+        <div><img src="/assets/img/footer-logo.png" alt="" /></div>
+
+        <div class="row py-3 footer-main">
+          <div class="col-md-5">
+            <div class="row">
+              <div class="col-6">
+                <h6 class="bold fs-20">Shop</h6>
+                <div class="footer-links">
+                  <a href="#"> RDY Prebuilt</a>
+                  <a href="#"> Computers</a>
+                  <a href="#">Easy Builder</a>
+                  <a href="#">Customize Gaming PC</a>
+                  <a href="#">Gaming PCs </a>
+                  <a href="#"> Gaming Laptops</a>
+                  <a href="#"> Gear Store</a>
+                </div>
+              </div>
+              <div class="col-6">
+                <h6 class="bold fs-20">Support</h6>
+                <div class="footer-links">
+                  <a href="#"> Order Status</a>
+                  <a href="#"> Support Home</a>
+                  <a href="#"> Drivers & Downloads</a>
+                  <a href="#">Return Policy</a>
+                  <a href="#">Warranty</a>
+                  <a href="#">FAQ / Knowledge Base</a>
+                  <a href="#"> Shipping Details</a>
+                  <a href="#"> Recycling</a>
+                  <a href="#"> Reward Point</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-7">
+            <div class="row">
+              <div class="col-md-4">
+                <h6 class="bold fs-20">Company</h6>
+                <div class="footer-links">
+                  <a href="#"> About Us</a>
+                  <a href="#">Career</a>
+                  <a href="#">Blog</a>
+                  <a href="#">Customer Reviews</a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="text-end">
+                  <div class="footer-socail">
+                    <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+                    <a href="#"><i class="fa-brands fa-discord"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                  </div>
+                  <p class="fs-16">
+                    Contact Us: <a class="contact" href="tel:+888-462-3899">888-462-3899</a>
+                  </p>
+                  <p class="fs-16">Get gaming news and iBUYPOWER promotions and offers!</p>
+                  <div class="row mx-1 mx-md-0">
+                    <input
+                      class="col-md-8 my-1 my-md-0 f-email"
+                      placeholder="Email"
+                      type="Email"
+                      name=""
+                      id=""
+                    />
+                    <input class="col-md-4 my-1 my-md-0 subs-btn" type="submit" value="Subscribe" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- footer bottom -->
+        <div class="footer-bottom">
+          <div class="row">
+            <div class="col-md-6">
+              <p class="muted fs-16">iBUYPOWER IS POWERED BY:</p>
+            </div>
+            <div class="col-md-6 flex">
+              <a class="muted fs-16 me-2 me-xxl-3" href="#">View All</a>
+              <p class="muted fs-16 me-2 me-xxl-3">iBUYPOWER PRODUCTS CAN BE PURCHASED FROM:</p>
+              <a class="muted fs-16" href="#">View All</a>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md">
+              <img src="assets/img/fb-1.png" alt="" />
+            </div>
+            <div class="col-md">
+              <img src="assets/img/fb2.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!-- footer -->
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
