--- a/index.html
+++ b/index.html
@@ -894,6 +894,98 @@
               >
             </div>
           </div>
+
+          <!-- main faq -->
+
+          <div class="container">
+            <div class="row">
+              <div class="accordion">
+                <div class="accordion-item">
+                  <div class="accordion-item-header">About Us</div>
+                  <!-- /.accordion-item-header -->
+                  <div class="accordion-item-body">
+                    <div class="accordion-item-body-content">
+                      BuildMyPC is a custom PC builder website, which allows you to build your own custom PC
+                      best possible as per your budget. Users can easily compare various available components
+                      under their budget in terms of their features and prices from different retailers online
+                      so users can decide which component to choose accordingly.
+                      <br />
+                      <br />
+
+                      BuildMyPC provides its users with various features and functionality like compatibility
+                      checkers, listing their builds, sharing their Rigs, price drop alert, various kinds of
+                      filters to filters the component you like.
+                      <br />
+                      <br />
+
+                      BuildMyPC is a site build by keeping in mind to provide its users with what's best in
+                      the market. Anyone can create the custom PC with the help of our tool as we undergo
+                      various compatibility tests for all the components so that only compatible parts are
+                      provided to their users.
+                    </div>
+                  </div>
+                  <!-- /.accordion-item-body -->
+                </div>
+                <div class="accordion-item">
+                  <div class="accordion-item-header">How and When Website Came to Existence</div>
+                  <!-- /.accordion-item-header -->
+                  <div class="accordion-item-body">
+                    <div class="accordion-item-body-content">
+                      Web Development broadly refers to the tasks associated with developing functional
+                      websites and applications for the Internet. The web development process includes web
+                      design, web content development, client-side/server-side scripting and network security
+                      configuration, among other tasks.
+                    </div>
+                  </div>
+                  <!-- /.accordion-item-body -->
+                </div>
+                <div class="accordion-item">
+                  <div class="accordion-item-header">
+                    Are there any other websites in the market which helps you to build your custom PC?
+                  </div>
+                  <!-- /.accordion-item-header -->
+                  <div class="accordion-item-body">
+                    <div class="accordion-item-body-content">
+                      Web Development broadly refers to the tasks associated with developing functional
+                      websites and applications for the Internet. The web development process includes web
+                      design, web content development, client-side/server-side scripting and network security
+                      configuration, among other tasks.
+                    </div>
+                  </div>
+                  <!-- /.accordion-item-body -->
+                </div>
+                <div class="accordion-item">
+                  <div class="accordion-item-header">
+                    How precise is the Build My PC in testing the compatibility and latest component pricing?
+                  </div>
+                  <!-- /.accordion-item-header -->
+                  <div class="accordion-item-body">
+                    <div class="accordion-item-body-content">
+                      Web Development broadly refers to the tasks associated with developing functional
+                      websites and applications for the Internet. The web development process includes web
+                      design, web content development, client-side/server-side scripting and network security
+                      configuration, among other tasks.
+                    </div>
+                  </div>
+                  <!-- /.accordion-item-body -->
+                </div>
+                <div class="accordion-item">
+                  <div class="accordion-item-header">I need to contribute to BMPC. How can I help?</div>
+                  <!-- /.accordion-item-header -->
+                  <div class="accordion-item-body">
+                    <div class="accordion-item-body-content">
+                      Web Development broadly refers to the tasks associated with developing functional
+                      websites and applications for the Internet. The web development process includes web
+                      design, web content development, client-side/server-side scripting and network security
+                      configuration, among other tasks.
+                    </div>
+                  </div>
+                  <!-- /.accordion-item-body -->
+                </div>
+                <!-- /.accordion-item -->
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <!-- faq -->
