fix slider space issue

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
       <!-- slider section -->
 
       <!-- build section -->
-      <section class="build pb-4 pb-md-5">
+      <section class="build py-4 py-md-5">
         <div class="container">
           <div class="row build-row">
             <div class="col col-12 col-md-6 col-lg-4 my-3 my-md-0 d-flex align-items-stretch">
@@ -354,106 +354,6 @@
               </div>
             </div>
           </div>
-          <!-- <div class="row row-cols-1 row-cols-md-3 gx-lg-4 g-3">
-            <div class="col">
-              <div class="build-card card-1">
-                <div class="card-head">
-                  <div class="row flex between">
-                    <div class="col-9">
-                      <h5 class="fs-20 center" style="word-wrap: break-word">
-                        Enthusiast AMD <br />
-                        Gaming/Streaming Build
-                      </h5>
-                    </div>
-                    <div class="col-3">
-                      <h6 class="rate-box">
-                        <span class="fs-16 bold"
-                          ><i class="fa-solid fa-star" style="color: #f9bd2c"></i
-                        ></span>
-                        <span class="fs-16 bold">1.2k</span>
-                      </h6>
-                    </div>
-                  </div>
-                  <img src="assets/img/build1.png" class="w-60" alt="..." />
-                </div>
-
-                <div class="card-body">
-                  <p class="fs-16 muted">
-                    Intel Core i3-12100F 2 GB Graphic Card Chipset: Radeon RX 6600) Fractal Design Focus G ATX
-                    Mid Tower
-                  </p>
-                  <h6 class="fs-20"><span class="muted-2">STARTING AT</span> <span>$772.99</span></h6>
-                </div>
-                <div class="card-foot">
-                  <a href="#" class="fs-20">START BUILDING</a>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="build-card card-2">
-                <div class="card-head">
-                  <div class="row flex between">
-                    <div class="col-8">
-                      <h5 class="fs-20 center" style="word-wrap: break-word">Great AMD Gaming Build</h5>
-                    </div>
-                    <div class="col-4">
-                      <h6 class="rate-box">
-                        <span class="fs-16 bold"
-                          ><i class="fa-solid fa-star" style="color: #f9bd2c"></i
-                        ></span>
-                        <span class="fs-16 bold">1.2k</span>
-                      </h6>
-                    </div>
-                  </div>
-                  <img class="w-70" src="assets/img/build2.png" alt="..." />
-                </div>
-
-                <div class="card-body">
-                  <p class="fs-16 muted">
-                    AMD Ryzen 5 5600X Parametric Video Card (Chipset: Radeon RX 6600 XT; Cooling: 2 Fans, 3
-                    Fans, 120 mm Radiator, ...) Antec DF700 Flux ATX Mid Tower
-                  </p>
-                  <h6 class="fs-20"><span class="muted-2">STARTING AT</span> <span>$872.99</span></h6>
-                </div>
-                <div class="card-foot">
-                  <a href="#" class="fs-20">START BUILDING</a>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="build-card card-3">
-                <div class="card-head">
-                  <div class="row flex between">
-                    <div class="col-8">
-                      <h5 class="fs-20 center" style="word-wrap: break-word">
-                        Enthusiast AMD Gaming/StreamingBuild
-                      </h5>
-                    </div>
-                    <div class="col-4">
-                      <h6 class="rate-box">
-                        <span class="fs-16 bold"
-                          ><i class="fa-solid fa-star" style="color: #f9bd2c"></i
-                        ></span>
-                        <span class="fs-16 bold">1.2k</span>
-                      </h6>
-                    </div>
-                  </div>
-                  <img src="assets/img/build3.png" alt="..." />
-                </div>
-
-                <div class="card-body">
-                  <p class="fs-16 muted">
-                    AMD Ryzen 7 5800X Parametric Video Card (Chipset: GeForce RTX 3070 Ti; Cooling: 2 Fans, 3
-                    Fans) Phanteks Eclipse P500A D-RGB ATX Mid Tower
-                  </p>
-                  <h6 class="fs-20"><span class="muted-2">STARTING AT</span> <span>$772.99</span></h6>
-                </div>
-                <div class="card-foot-3">
-                  <a href="#" class="fs-14">START BUILDING</a>
-                </div>
-              </div>
-            </div>
-          </div> -->
         </div>
       </section>
       <!-- build section -->
@@ -600,7 +500,7 @@
       <section class="works py-5">
         <div class="container">
           <div class="row common-slider">
-            <div class="col-lg-4">
+            <div class="col-lg-4 d-flex align-items-stretch">
               <div class="work h-100">
                 <div class="flex center">
                   <img class="py-2" src="assets/img/works1.png" alt="" />
@@ -650,45 +550,6 @@
               </div>
             </div>
           </div>
-
-          <!-- <div class="work-slider">
-            <div class="work h-100">
-              <img class="py-2" src="assets/img/works1.png" alt="" />
-              <h6 class="fs-20 bold mons pt-2">We list Components</h6>
-              <p class="fs-16 muted">
-                Along with it, if you don't find any product on our website, then you can email our team and
-                we'll add the product on our website especially for you!
-              </p>
-            </div>
-
-            <div class="work h-100">
-              <img class="py-2" src="assets/img/work2.png" alt="" />
-              <h6 class="fs-20 bold mons pt-2">Check the Compatibility</h6>
-              <p class="fs-16 muted">
-                Although we try to add compatibility of all the products manually, but still if you find
-                anything which isn't compatible with the product it has to be compatible with, then you can
-                email us and we'll take the required actions ASAP.
-              </p>
-            </div>
-
-            <div class="work h-100">
-              <img class="py-2" src="assets/img/work3.png" alt="" />
-              <h6 class="fs-20 bold mons pt-2">Create a High-End PC</h6>
-              <p class="fs-16 muted">
-                If you're not sure how to build your PC yourself, then you can also check the compatibility
-                using Build My PC and take help from local shops to build your custom PC.
-              </p>
-            </div>
-
-            <div class="work t-center">
-              <img class="py-2" src="assets/img/works1.png" alt="" />
-              <h6 class="fs-20 bold mons">We list Components</h6>
-              <p class="fs-16 muted">
-                Along with it, if you don't find any product on our website, then you can email our team and
-                we'll add the product on our website especially for you!
-              </p>
-            </div>
-          </div> -->
         </div>
       </section>
       <!-- how works system -->
